[BACKEND] Update API
