# backend/openapi-schema/openapi.yaml
@@ -3,14 +3,14 @@ info:
   title: Simple Split API
   version: 0.1.0
 paths:
-  /expense:
+  /api/member:
     description: |
-      - expenses
+      - members
     post:
       tags:
-      - expenses
+      - members
       description: |
-        - expenses
+        - members
       parameters:
       - name: password
         in: query
@@ -25,42 +25,17 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/PostExpenseRequest'
+              $ref: '#/components/schemas/PostMemberRequest'
         required: true
       responses:
         '200':
           description: |+
-            Created expense
+            Group containing the created member
 
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/PostExpenseResponse'
-        '400':
-          description: |+
-            Bad request
-
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessageDto'
-  /currency:
-    description: |
-      - currencies
-    get:
-      tags:
-      - currencies
-      description: |
-        - currencies
-      responses:
-        '200':
-          description: |+
-            Supported currencies
-
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/GetCurrenciesResponse'
+                $ref: '#/components/schemas/PostMemberResponse'
         '400':
           description: |+
             Bad request
@@ -82,7 +57,9 @@ paths:
         in: query
         required: true
         schema:
-          type: string
+          type:
+          - string
+          - 'null'
         allowReserved: false
         style: form
       responses:
@@ -166,7 +143,48 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorMessageDto'
-  /member/{memberId}:
+  /api/export/{groupIdAndExtension}:
+    description: |
+      - groups
+    get:
+      tags:
+      - groups
+      description: |
+        - groups
+      parameters:
+      - name: password
+        in: query
+        required: true
+        schema:
+          type:
+          - string
+          - 'null'
+        allowReserved: false
+        style: form
+      - name: groupIdAndExtension
+        in: path
+        required: true
+        schema:
+          type: string
+        style: simple
+      responses:
+        '200':
+          description: |+
+            Exported group data
+
+          content:
+            text/csv:
+              schema:
+                type: string
+        '400':
+          description: |+
+            Bad request
+
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessageDto'
+  /api/member/{memberId}:
     description: |
       - members
     put:
@@ -251,48 +269,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorMessageDto'
-  /export/{groupIdAndExtension}:
-    description: |
-      - groups
-    get:
-      tags:
-      - groups
-      description: |
-        - groups
-      parameters:
-      - name: password
-        in: query
-        required: true
-        schema:
-          type:
-          - string
-          - 'null'
-        allowReserved: false
-        style: form
-      - name: groupIdAndExtension
-        in: path
-        required: true
-        schema:
-          type: string
-        style: simple
-      responses:
-        '200':
-          description: |+
-            Exported group data
-
-          content:
-            text/csv:
-              schema:
-                type: string
-        '400':
-          description: |+
-            Bad request
-
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessageDto'
-  /expense/{expenseId}:
+  /api/expense/{expenseId}:
     description: |
       - expenses
     put:
@@ -301,15 +278,6 @@ paths:
       description: |
         - expenses
       parameters:
-      - name: password
-        in: query
-        required: true
-        schema:
-          type:
-          - string
-          - 'null'
-        allowReserved: false
-        style: form
       - name: expenseId
         in: path
         required: true
@@ -345,15 +313,6 @@ paths:
       description: |
         - expenses
       parameters:
-      - name: password
-        in: query
-        required: true
-        schema:
-          type:
-          - string
-          - 'null'
-        allowReserved: false
-        style: form
       - name: expenseId
         in: path
         required: true
@@ -369,6 +328,62 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DeleteExpenseResponse'
+        '400':
+          description: |+
+            Bad request
+
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessageDto'
+  /api/expense:
+    description: |
+      - expenses
+    post:
+      tags:
+      - expenses
+      description: |
+        - expenses
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PostExpenseRequest'
+        required: true
+      responses:
+        '200':
+          description: |+
+            Created expense
+
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PostExpenseResponse'
+        '400':
+          description: |+
+            Bad request
+
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessageDto'
+  /api/currency:
+    description: |
+      - currencies
+    get:
+      tags:
+      - currencies
+      description: |
+        - currencies
+      responses:
+        '200':
+          description: |+
+            Supported currencies
+
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetCurrenciesResponse'
         '400':
           description: |+
             Bad request
@@ -405,47 +420,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/LoginResponse'
-        '400':
-          description: |+
-            Bad request
-
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorMessageDto'
-  /member:
-    description: |
-      - members
-    post:
-      tags:
-      - members
-      description: |
-        - members
-      parameters:
-      - name: password
-        in: query
-        required: true
-        schema:
-          type:
-          - string
-          - 'null'
-        allowReserved: false
-        style: form
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PostMemberRequest'
-        required: true
-      responses:
-        '200':
-          description: |+
-            Group containing the created member
-
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PostMemberResponse'
         '400':
           description: |+
             Bad request
@@ -511,6 +485,11 @@ paths:
           description: |+
             Created user and authentication tokens
 
+          headers:
+            set-cookie:
+              required: true
+              schema:
+                type: string
           content:
             application/json:
               schema:
